<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.crioprecipitati.androidpervasive1718.viewPresenter.login.LoginActivity"
        tools:layout_editor_absoluteY="25dp"
        android:autofillHints="username"
        >


    <android.support.design.widget.TextInputLayout
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:id="@+id/tilPatient"
            app:layout_constraintEnd_toStartOf="@+id/glVertical"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tilUsername"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintVertical_bias="0.0"
            >

        <android.support.design.widget.TextInputEditText
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:hint="Codice Fiscale Paziente"
                android:id="@+id/etPatient"
                android:fontFamily="monospace"
                android:textSize="12sp"
                />
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="Crea nuova sessione"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btnCreateNewSession"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glVertical"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glHorizontal"
            android:fontFamily="monospace"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilPatient"
            android:textColor="@android:color/background_light"
            android:background="@drawable/selector_button"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />
    <Button
            android:text="Richiedi sessioni aperte"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btnRequestOpenSessions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/glVertical"
            android:fontFamily="monospace"
            app:layout_constraintTop_toTopOf="@+id/glHorizontal"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/background_light"
            android:backgroundTint="@android:color/holo_green_light"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            />
    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/glVertical"
            app:layout_constraintGuide_begin="225dp"
            android:orientation="vertical"
            />
    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/glHorizontal"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="180dp"
            />

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:id="@+id/tilUsername"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/glVertical"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btnShowIPDialog"
            android:layout_marginEnd="8dp"
            >

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Codice Fiscale Utente"
                android:fontFamily="monospace"
                android:id="@+id/etUsername"
                android:textSize="12sp"
                />
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="IP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnShowIPDialog"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tilUsername"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@+id/glVertical"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="8dp"
            />
    <RadioGroup
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:id="@+id/rgMemberType"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glHorizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tilUsername"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/glVertical"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            >
        <RadioButton
                android:text="Leader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbLeader"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:checked="true"
                />
        <RadioButton
                android:text="Membro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbMember"
                android:layout_weight="1"
                android:fontFamily="monospace"
                />
    </RadioGroup>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pbLoadingSpinner"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/rgMemberType"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/rgMemberType"
            app:layout_constraintBottom_toBottomOf="@+id/rgMemberType"
            android:visibility="gone"
            tools:visibility="visible"
            />
    <android.support.v7.widget.RecyclerView
            android:layout_width="350dp"
            android:layout_height="147dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"
            tools:listitem="@layout/item_session"
            android:id="@+id/rvSessionList"
            app:layout_constraintTop_toTopOf="@+id/glHorizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.529"
            app:layout_constraintStart_toStartOf="@+id/glVertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            >
    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>
